; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ramips/files-4.14/drivers/net/ethernet/mediatek/extr_esw_rt3050.c_rt305x_mii_write.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ramips/files-4.14/drivers/net/ethernet/mediatek/extr_esw_rt3050.c_rt305x_mii_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rt305x_esw = type { i32 }

@jiffies = common dso_local global i64 0, align 8
@RT305X_ESW_REG_PCR1 = common dso_local global i32 0, align 4
@RT305X_ESW_PCR1_WT_DONE = common dso_local global i32 0, align 4
@RT305X_ESW_PHY_TIMEOUT = common dso_local global i64 0, align 8
@RT305X_ESW_PCR0_WT_NWAY_DATA_S = common dso_local global i32 0, align 4
@RT305X_ESW_PCR0_CPU_PHY_REG_S = common dso_local global i32 0, align 4
@RT305X_ESW_PCR0_WT_PHY_CMD = common dso_local global i32 0, align 4
@RT305X_ESW_REG_PCR0 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"ramips_eth: MDIO timeout\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rt305x_esw*, i32, i32, i32)* @rt305x_mii_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rt305x_mii_write(%struct.rt305x_esw* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.rt305x_esw*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store %struct.rt305x_esw* %0, %struct.rt305x_esw** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i64, i64* @jiffies, align 8
  store i64 %11, i64* %9, align 8
  store i32 0, i32* %10, align 4
  br label %12

12:                                               ; preds = %4, %28
  %13 = load %struct.rt305x_esw*, %struct.rt305x_esw** %5, align 8
  %14 = load i32, i32* @RT305X_ESW_REG_PCR1, align 4
  %15 = call i32 @esw_r32(%struct.rt305x_esw* %13, i32 %14)
  %16 = load i32, i32* @RT305X_ESW_PCR1_WT_DONE, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %12
  br label %29

20:                                               ; preds = %12
  %21 = load i64, i64* @jiffies, align 8
  %22 = load i64, i64* %9, align 8
  %23 = load i64, i64* @RT305X_ESW_PHY_TIMEOUT, align 8
  %24 = add i64 %22, %23
  %25 = call i64 @time_after(i64 %21, i64 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %20
  store i32 1, i32* %10, align 4
  br label %65

28:                                               ; preds = %20
  br label %12

29:                                               ; preds = %19
  %30 = load i32, i32* %8, align 4
  %31 = and i32 %30, 65535
  store i32 %31, i32* %8, align 4
  %32 = load %struct.rt305x_esw*, %struct.rt305x_esw** %5, align 8
  %33 = load i32, i32* %8, align 4
  %34 = load i32, i32* @RT305X_ESW_PCR0_WT_NWAY_DATA_S, align 4
  %35 = shl i32 %33, %34
  %36 = load i32, i32* %7, align 4
  %37 = load i32, i32* @RT305X_ESW_PCR0_CPU_PHY_REG_S, align 4
  %38 = shl i32 %36, %37
  %39 = or i32 %35, %38
  %40 = load i32, i32* %6, align 4
  %41 = or i32 %39, %40
  %42 = load i32, i32* @RT305X_ESW_PCR0_WT_PHY_CMD, align 4
  %43 = or i32 %41, %42
  %44 = load i32, i32* @RT305X_ESW_REG_PCR0, align 4
  %45 = call i32 @esw_w32(%struct.rt305x_esw* %32, i32 %43, i32 %44)
  %46 = load i64, i64* @jiffies, align 8
  store i64 %46, i64* %9, align 8
  br label %47

47:                                               ; preds = %29, %63
  %48 = load %struct.rt305x_esw*, %struct.rt305x_esw** %5, align 8
  %49 = load i32, i32* @RT305X_ESW_REG_PCR1, align 4
  %50 = call i32 @esw_r32(%struct.rt305x_esw* %48, i32 %49)
  %51 = load i32, i32* @RT305X_ESW_PCR1_WT_DONE, align 4
  %52 = and i32 %50, %51
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %54, label %55

54:                                               ; preds = %47
  br label %64

55:                                               ; preds = %47
  %56 = load i64, i64* @jiffies, align 8
  %57 = load i64, i64* %9, align 8
  %58 = load i64, i64* @RT305X_ESW_PHY_TIMEOUT, align 8
  %59 = add i64 %57, %58
  %60 = call i64 @time_after(i64 %56, i64 %59)
  %61 = icmp ne i64 %60, 0
  br i1 %61, label %62, label %63

62:                                               ; preds = %55
  store i32 1, i32* %10, align 4
  br label %64

63:                                               ; preds = %55
  br label %47

64:                                               ; preds = %62, %54
  br label %65

65:                                               ; preds = %64, %27
  %66 = load i32, i32* %10, align 4
  %67 = icmp ne i32 %66, 0
  br i1 %67, label %68, label %73

68:                                               ; preds = %65
  %69 = load %struct.rt305x_esw*, %struct.rt305x_esw** %5, align 8
  %70 = getelementptr inbounds %struct.rt305x_esw, %struct.rt305x_esw* %69, i32 0, i32 0
  %71 = load i32, i32* %70, align 4
  %72 = call i32 @dev_err(i32 %71, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %73

73:                                               ; preds = %68, %65
  %74 = load i32, i32* %10, align 4
  ret i32 %74
}

declare dso_local i32 @esw_r32(%struct.rt305x_esw*, i32) #1

declare dso_local i64 @time_after(i64, i64) #1

declare dso_local i32 @esw_w32(%struct.rt305x_esw*, i32, i32) #1

declare dso_local i32 @dev_err(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
